apps/base/keycloak/deployment.yaml
# Reference:
# https://github.com/keycloak/keycloak/discussions/12594
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: 'keycloak'
          image: 'ghcr.io/dudeofawesome/keycloak:26.6@sha256:f172c873e355c83f6508a0f9608d77b70246b734879c72e95e600680f22e1f4b'
          args: ['start', '--optimized']
          volumeMounts:
            - name: https-certificate-file
              mountPath: /run/secrets/tls.crt
              subPath: tls.crt
              readOnly: true
            - name: https-certificate-key-file
              mountPath: /run/secrets/tls.key
              subPath: tls.key
              readOnly: true
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
            - name: health
              containerPort: 9000
          resources:
            requests:
              cpu: 10m
              memory: 400Mi
            limits:
              cpu: 1000m
              memory: 1500Mi
          startupProbe:
            timeoutSeconds: 180 # 3 minutes
            periodSeconds: 30
            httpGet:
              path: /health/ready
              port: health
              scheme: HTTPS
          readinessProbe:
            timeoutSeconds: 30
            httpGet:
              path: /health/ready
              port: health
              scheme: HTTPS
          livenessProbe:
            timeoutSeconds: 30
            httpGet:
              path: /health/live
              port: health
              scheme: HTTPS
      volumes:
        - name: https-certificate-file
          secret:
            secretName: internal-cluster-service-cert
            items:
              - key: tls.crt
                path: tls.crt
        - name: https-certificate-key-file
          secret:
            secretName: internal-cluster-service-cert
            items:
              - key: tls.key
                path: tls.key
