apps/base/keycloak/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: 'keycloak-dashboard-https'
spec:
  entryPoints:
    - 'websecure'
  routes:
    - match: 'Host(`keycloak.orleans.io`)'
      kind: 'Rule'
      services:
        - name: 'keycloak'
          port: 8080
      # middlewares:
      #   - name: security-no-frame-deny
      #     namespace: kube-system
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    monitor: keycloak
spec:
  selector:
    component: app
  ports:
    - name: http
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  namespace: keycloak
spec:
  selector:
    component: app
  clusterIP: None
  sessionAffinity: None
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    - name: jgroups
      port: 7600
      protocol: TCP
      targetPort: jgroups
